// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeOptions tests renders the form correctly when all options deleted 1`] = `
<table>
  <tbody>
    <tr
      key="newOption234"
    >
      <td>
        <FormTextInput
          fieldName="optionValue_new"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value=""
        />
      </td>
      <td>
        <Icon
          as="i"
          name="add"
          onClick={[Function]}
          title="confirm new Attribute"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`AttributeOptions tests renders the form correctly with no options 1`] = `
<table>
  <tbody>
    <tr
      key="newOption234"
    >
      <td>
        <FormTextInput
          fieldName="optionValue_new"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value=""
        />
      </td>
      <td>
        <Icon
          as="i"
          name="add"
          onClick={[Function]}
          title="confirm new Attribute"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`AttributeOptions tests renders the form correctly with options 1`] = `
<table>
  <tbody>
    <tr
      className=""
      key="option_123"
      title=""
    >
      <td>
        <FormTextInput
          fieldName="optionValue_123"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value="braze"
        />
      </td>
      <td>
        <FrameworkMoves
          componentKey={123}
          moveDown={[Function]}
          moveToBottom={[Function]}
          moveToTop={[Function]}
          moveUp={[Function]}
        />
      </td>
    </tr>
    <tr
      className=""
      key="option_323"
      title=""
    >
      <td>
        <FormTextInput
          fieldName="optionValue_323"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value="band"
        />
      </td>
      <td>
        <FrameworkMoves
          componentKey={323}
          moveDown={[Function]}
          moveToBottom={[Function]}
          moveToTop={[Function]}
          moveUp={[Function]}
        />
      </td>
    </tr>
    <tr
      className=""
      key="option_hjgfkuyg34"
      title=""
    >
      <td>
        <FormTextInput
          fieldName="optionValue_hjgfkuyg34"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value="boggle"
        />
      </td>
      <td>
        <FrameworkMoves
          componentKey="hjgfkuyg34"
          moveDown={[Function]}
          moveToBottom={[Function]}
          moveToTop={[Function]}
          moveUp={[Function]}
        />
      </td>
    </tr>
    <tr
      key="newOption234"
    >
      <td>
        <FormTextInput
          fieldName="optionValue_new"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="add new"
          value=""
        />
      </td>
      <td>
        <Icon
          as="i"
          name="add"
          onClick={[Function]}
          title="confirm new Attribute"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
